sdlc_implementor: feature: add env setup guide and scripts

--- a/.env.sample
+++ b/.env.sample
@@ -1,29 +1,191 @@
-# (REQUIRED) Anthropic Configuration to run Claude Code in programmatic mode
+################################################################################
+# tac-webbuilder Environment Configuration
+#
+# This file contains all environment variables needed to run tac-webbuilder.
+# Copy this file to .env and fill in your values:
+#   cp .env.sample .env
+#
+# Or use the interactive setup script:
+#   ./scripts/setup_env.sh
+#
+# Validate your configuration:
+#   ./scripts/test_config.sh
+#
+# SECURITY WARNING: Never commit your .env file to version control!
+################################################################################
+
+################################################################################
+# ANTHROPIC CONFIGURATION (REQUIRED)
+################################################################################
+
+# (REQUIRED) Anthropic API Key for Claude Code programmatic mode
+# This is required for Claude Code to function in programmatic mode
+# Get your API key from: https://console.anthropic.com/settings/keys
+# Cost: Pay-as-you-go pricing, monitor usage in Anthropic Console
 ANTHROPIC_API_KEY=
 
-# GitHub Configuration (Optional)
-# Use this if you want ADW to use a different GitHub account than your default 'gh auth' login
-# If not set, ADW will use whatever GitHub account is authenticated with 'gh auth login'
-# (Optional)
-GITHUB_PAT=
+################################################################################
+# CLAUDE CODE CONFIGURATION
+################################################################################
 
-# (Optional) Claude Code Path - if 'claude' does not work run 'which claude' and paste that value here
+# (Optional) Claude Code executable path
+# Default: claude (assumes it's in your PATH)
+# If 'claude' command doesn't work, run 'which claude' and paste the full path here
+# Example: /usr/local/bin/claude
 CLAUDE_CODE_PATH=claude
 
-# (Optional) Agent Cloud Sandbox Environment
-E2B_API_KEY=
-
-# (Optional)( Returns claude code to the root directory after every command
+# (Optional) Returns Claude Code to the root directory after every command
+# Default: true (recommended for better context management)
+# Set to false if you want Claude Code to maintain its working directory
 CLAUDE_BASH_MAINTAIN_PROJECT_WORKING_DIR=true
 
-# (Optional If you use cloudflare's tunnel to expose `adws/trigger_webhook.py` to github (public internet)
+################################################################################
+# GITHUB CONFIGURATION
+################################################################################
+
+# (Optional) GitHub Personal Access Token
+# Only needed if you want ADW to use a different GitHub account than your
+# default 'gh auth' login. If not set, ADW will use whatever GitHub account
+# is authenticated with 'gh auth login'
+#
+# Create a token at: https://github.com/settings/tokens
+# Required scopes: repo, workflow, read:org (for private repos)
+# Recommended: Use Fine-Grained tokens with minimum required permissions
+GITHUB_PAT=
+
+################################################################################
+# ADW WORKFLOW CONFIGURATION
+################################################################################
+
+# (Optional) Cloudflare Tunnel Token for ADW webhook server
+# Required only if you want to expose adws/trigger_webhook.py to the public
+# internet so GitHub can send webhooks to your local machine
+#
+# Setup guide:
+# 1. Install cloudflared: https://developers.cloudflare.com/cloudflare-one/connections/connect-apps/install-and-setup/
+# 2. Create a tunnel: cloudflared tunnel create tac-webhook
+# 3. Get your tunnel token from the Cloudflare Zero Trust dashboard
+#
+# If not using webhooks, ADW can still be used manually
 CLOUDFLARED_TUNNEL_TOKEN=
 
+################################################################################
+# WEB APPLICATION CONFIGURATION (Optional)
+################################################################################
+
+# (Optional) OpenAI API Key for natural language to SQL feature
+# Required only if you want to use OpenAI models for SQL generation
+# Get your API key from: https://platform.openai.com/api-keys
+# Note: You need either OpenAI or Anthropic API key for SQL features
+OPENAI_API_KEY=
+
+# Note: ANTHROPIC_API_KEY (defined above) can also be used for SQL features
+
+################################################################################
+# CLOUD SERVICES CONFIGURATION (Optional)
+################################################################################
+
+# (Optional) E2B API Key for Agent Cloud Sandbox Environment
+# Provides isolated code execution environments for agents
+# Get your API key from: https://e2b.dev/docs/getting-started/api-key
+# Not required for basic functionality
+E2B_API_KEY=
+
 # (Optional) Cloudflare R2 Configuration for uploading review screenshots
-# If configured, review screenshots will be uploaded to R2 and displayed as images in GitHub comments
-# If not configured, local file paths will be shown instead
+# If configured, review screenshots will be uploaded to R2 and displayed as
+# images in GitHub comments. If not configured, local file paths will be shown.
+#
+# Setup guide:
+# 1. Create an R2 bucket: https://dash.cloudflare.com/?to=/:account/r2
+# 2. Create API tokens: https://dash.cloudflare.com/profile/api-tokens
+# 3. Set up public access domain for your bucket
+# 4. Fill in the values below
 CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_R2_ACCESS_KEY_ID=
 CLOUDFLARE_R2_SECRET_ACCESS_KEY=
 CLOUDFLARE_R2_BUCKET_NAME=
 CLOUDFLARE_R2_PUBLIC_DOMAIN=
+
+################################################################################
+# PLAYWRIGHT MCP CONFIGURATION (Optional)
+################################################################################
+
+# Playwright MCP is configured via playwright-mcp-config.json
+# The MCP server is used for browser automation in E2E tests
+# Default configuration:
+#   - Browser: Chromium
+#   - Headless: true
+#   - Video recording: enabled (saved to ./videos/)
+#   - Viewport: 1920x1080
+#
+# To customize, edit playwright-mcp-config.json directly
+
+################################################################################
+# QUICK START CHECKLIST
+################################################################################
+
+# Required for basic functionality:
+# [ ] Set ANTHROPIC_API_KEY
+# [ ] Install Claude Code: npm install -g @anthropic-ai/claude-code
+# [ ] Verify Claude Code path with: which claude
+# [ ] Install GitHub CLI: https://cli.github.com/
+# [ ] Authenticate with GitHub: gh auth login
+#
+# Optional for full functionality:
+# [ ] Set GITHUB_PAT (if using different GitHub account)
+# [ ] Set CLOUDFLARED_TUNNEL_TOKEN (for webhook support)
+# [ ] Set E2B_API_KEY (for sandboxed code execution)
+# [ ] Set Cloudflare R2 credentials (for screenshot uploads)
+# [ ] Set OPENAI_API_KEY (if preferring OpenAI for SQL features)
+#
+# Validate your configuration:
+#   ./scripts/test_config.sh
+#
+# For detailed documentation, see: docs/configuration.md
+
+################################################################################
+# BEST PRACTICES
+################################################################################
+
+# Security:
+# - Never commit .env to version control (already in .gitignore)
+# - Rotate API keys regularly (every 90 days recommended)
+# - Use minimum required token scopes for GitHub PAT
+# - Store sensitive values in password manager
+# - Use environment-specific .env files (.env.development, .env.production)
+#
+# Performance:
+# - Use E2B for isolated code execution in production
+# - Enable video recording only when debugging E2E tests
+# - Monitor API usage in respective provider dashboards
+#
+# Development:
+# - Use CLAUDE_BASH_MAINTAIN_PROJECT_WORKING_DIR=true for better context
+# - Set up R2 for easier screenshot sharing with team
+# - Use Cloudflare Tunnel for testing GitHub webhook integrations
+
+################################################################################
+# TROUBLESHOOTING
+################################################################################
+
+# Common issues and solutions:
+#
+# 1. "claude: command not found"
+#    - Install Claude Code: npm install -g @anthropic-ai/claude-code
+#    - Or set CLAUDE_CODE_PATH to full path from: which claude
+#
+# 2. "GitHub authentication failed"
+#    - Run: gh auth login
+#    - Or set GITHUB_PAT with valid token
+#
+# 3. "Invalid API key"
+#    - Verify key format (no extra spaces/newlines)
+#    - Check key hasn't expired in provider dashboard
+#    - Ensure key has required permissions
+#
+# 4. "Webhook not receiving events"
+#    - Verify CLOUDFLARED_TUNNEL_TOKEN is set correctly
+#    - Ensure cloudflared is running: cloudflared tunnel run
+#    - Check GitHub webhook settings for correct URL
+#
+# For more help, see: docs/configuration.md or docs/troubleshooting.md
