--- a/app/server/pyproject.toml
+++ b/app/server/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv==1.0.1",
     "rich==13.0.0",
     "pydantic>=2.0.0",
+    "markdown>=3.0.0",
 ]
 
 [project.optional-dependencies]
