--- a/app/server/pyproject.toml
+++ b/app/server/pyproject.toml
@@ -12,11 +12,14 @@ dependencies = [
     "anthropic==0.54.0",
     "pandas==2.3.0",
     "python-dotenv==1.0.1",
+    "rich>=13.0.0",
+    "pydantic>=2.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest==8.4.1",
+    "pytest-asyncio>=0.21.0",
 ]
 
 [tool.pytest.ini_options]
