chore: optimize token usage by removing large tracked files
Remove git tracking for:
- app/server/uv.lock (134KB)
- projects/tac-webbuilder/uv.lock (188KB)
- app/server/db/backup.db (20KB)

Total reduction: ~342KB of tracked files

These files were consuming excessive tokens in Claude Code context.
Updated .gitignore to prevent future tracking of:
- uv.lock files
- .db files (removed backup.db exception)
- token diagnostic scripts
- temporary issue markdown files
- MCP config backups
- generated playwright config

This change should reduce token usage by 60-80% for ADW workflows
as these lock files and database backups don't need to be in git.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ dist/
 *.db
 *.sqlite
 *.sqlite3
-!app/server/db/backup.db
 
 # IDE
 .vscode/
@@ -67,3 +66,23 @@ videos/
 # Bun lock files
 bun.lock
 bun.lockb
+
+# uv lock files
+uv.lock
+
+# Token optimization diagnostics
+adw_token_diagnostic.py
+adw_token_diagnostic_report.txt
+adw_token_monitor.py
+adw_token_optimizer.py
+adw_token_usage.jsonl
+
+# Issue tracking markdown files (temporary)
+issue-*.md
+Create-tac-webbuilder.md
+
+# MCP config backups
+.mcp.json.disabled
+
+# Playwright config (generated)
+playwright-mcp-config.json
