--- a/projects/tac-webbuilder/pyproject.toml
+++ b/projects/tac-webbuilder/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "pyyaml>=6.0.0",
     "python-dotenv>=1.0.0",
+    "fastapi>=0.115.0",
+    "uvicorn[standard]>=0.32.0",
+    "websockets>=13.0",
 ]
 
 [project.optional-dependencies]
@@ -30,6 +33,7 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --cov=core --cov=interfaces --cov-report=term-missing"
+asyncio_mode = "auto"
 
 [tool.coverage.run]
 source = ["core", "interfaces"]
@@ -49,4 +53,6 @@ exclude_lines = [
 dev = [
     "pytest>=9.0.0",
     "pytest-cov>=7.0.0",
+    "pytest-asyncio==0.21.2",
+    "httpx>=0.25.0",
 ]
