sdlc_implementor: feature: integrate Playwright MCP for E2E testing

--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ Create-tac-webbuilder.md
 
 # MCP config backups
 .mcp.json.disabled
+.mcp.json
 
 # Playwright config (generated)
 playwright-mcp-config.json
