sdlc_implementor: feature: add env setup scripts

--- a/.env.sample
+++ b/.env.sample
@@ -1,28 +1,118 @@
-# (REQUIRED) Anthropic Configuration to run Claude Code in programmatic mode
+# =============================================================================
+# TAC-WEBBUILDER ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env and fill in your values
+# Required fields are marked with (REQUIRED)
+# Optional fields are marked with (Optional)
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# ANTHROPIC CONFIGURATION
+# -----------------------------------------------------------------------------
+# (REQUIRED) Your Anthropic API key for Claude Code programmatic mode
+# Get your key from: https://console.anthropic.com/settings/keys
 ANTHROPIC_API_KEY=
 
-# GitHub Configuration (Optional)
-# Use this if you want ADW to use a different GitHub account than your default 'gh auth' login
-# If not set, ADW will use whatever GitHub account is authenticated with 'gh auth login'
-# (Optional)
-GITHUB_PAT=
-
-# (Optional) Claude Code Path - if 'claude' does not work run 'which claude' and paste that value here
+# -----------------------------------------------------------------------------
+# CLAUDE CODE CONFIGURATION
+# -----------------------------------------------------------------------------
+# (Optional) Path to Claude Code binary
+# Default: claude
+# To find your path, run: which claude
 CLAUDE_CODE_PATH=claude
 
-# (Optional) Agent Cloud Sandbox Environment
-E2B_API_KEY=
-
-# (Optional)( Returns claude code to the root directory after every command
+# (Optional) Keep Claude Code in project root after every command
+# Recommended: true
 CLAUDE_BASH_MAINTAIN_PROJECT_WORKING_DIR=true
 
-# (Optional If you use cloudflare's tunnel to expose `adws/trigger_webhook.py` to github (public internet)
+# -----------------------------------------------------------------------------
+# GITHUB CONFIGURATION
+# -----------------------------------------------------------------------------
+# (Optional) GitHub Personal Access Token
+# Only needed if you want to use a different account than your 'gh auth' login
+# If not set, ADW uses whatever account is authenticated via 'gh auth login'
+# Get token from: https://github.com/settings/tokens
+# Required scopes: repo, workflow
+GITHUB_PAT=
+
+# (Optional) Default GitHub repository for webbuilder
+# Format: owner/repo-name
+GITHUB_REPO_URL=
+
+# (Optional) Auto-post issues without confirmation
+# Default: false
+AUTO_POST_ISSUES=false
+
+# -----------------------------------------------------------------------------
+# ADW WORKFLOW CONFIGURATION
+# -----------------------------------------------------------------------------
+# (Optional) Default ADW workflow to use
+# Options: adw_sdlc_iso, adw_plan_build_test_iso, adw_build_iso
+# Default: adw_sdlc_iso
+DEFAULT_WORKFLOW=adw_sdlc_iso
+
+# (Optional) Default model set for ADW workflows
+# Options: base, heavy
+# Default: base
+DEFAULT_MODEL_SET=base
+
+# -----------------------------------------------------------------------------
+# WEB UI CONFIGURATION
+# -----------------------------------------------------------------------------
+# (Optional) Port for web UI frontend
+# Default: 5174
+WEB_UI_PORT=5174
+
+# (Optional) Port for web UI backend API
+# Default: 8002
+WEB_API_PORT=8002
+
+# -----------------------------------------------------------------------------
+# CLOUD SANDBOX (E2B)
+# -----------------------------------------------------------------------------
+# (Optional) E2B API key for cloud sandbox execution
+# Used for isolated code execution in ADW workflows
+# Get your key from: https://e2b.dev/docs
+E2B_API_KEY=
+
+# -----------------------------------------------------------------------------
+# CLOUDFLARE TUNNEL
+# -----------------------------------------------------------------------------
+# (Optional) Cloudflare Tunnel token
+# Used to expose webhook endpoint to GitHub (public internet)
+# Only needed if you want GitHub to trigger ADW workflows automatically
+# Get from: https://dash.cloudflare.com/
 CLOUDFLARED_TUNNEL_TOKEN=
 
-# (Optional) Cloudflare R2 Configuration for uploading review screenshots
-# If configured, review screenshots will be uploaded to R2 and displayed as images in GitHub comments
+# -----------------------------------------------------------------------------
+# CLOUDFLARE R2 (Screenshot Upload)
+# -----------------------------------------------------------------------------
+# (Optional) Cloudflare R2 configuration for uploading review screenshots
+# If configured, screenshots will be uploaded to R2 and displayed in GitHub comments
 # If not configured, local file paths will be shown instead
+# Get from: https://dash.cloudflare.com/
+
+CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_R2_ACCESS_KEY_ID=
 CLOUDFLARE_R2_SECRET_ACCESS_KEY=
 CLOUDFLARE_R2_BUCKET_NAME=
 CLOUDFLARE_R2_PUBLIC_DOMAIN=
+
+# -----------------------------------------------------------------------------
+# PLAYWRIGHT MCP
+# -----------------------------------------------------------------------------
+# No environment variables needed for Playwright MCP
+# Configuration is in playwright-mcp-config.json
+# MCP server settings are in .mcp.json
+
+# =============================================================================
+# QUICK START CHECKLIST
+# =============================================================================
+# [ ] 1. Add ANTHROPIC_API_KEY (REQUIRED)
+# [ ] 2. Verify CLAUDE_CODE_PATH with: which claude
+# [ ] 3. Authenticate GitHub with: gh auth login
+# [ ] 4. (Optional) Configure E2B for cloud sandboxing
+# [ ] 5. (Optional) Set up Cloudflare Tunnel for webhooks
+# [ ] 6. (Optional) Configure R2 for screenshot uploads
+# [ ] 7. Test configuration with: ./scripts/test_config.sh
+# =============================================================================
