--- a/app/client/package.json
+++ b/app/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 5174",
+    "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -20,10 +20,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.3",
-    "typescript": "^5.6.2",
-    "vite": "^6.0.0",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.19",
+    "dotenv": "^17.2.3",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.6.2",
+    "vite": "^6.0.0"
   }
 }
