sdlc_planner: chore: update MCP config to use worktree paths

--- a/playwright-mcp-config.json
+++ b/playwright-mcp-config.json
@@ -6,7 +6,7 @@
     },
     "contextOptions": {
       "recordVideo": {
-        "dir": "./videos",
+        "dir": "/Users/Warmonger0/tac/tac-7/trees/26e44bd2/videos",
         "size": {
           "width": 1920,
           "height": 1080
