--- a/app/server/pyproject.toml
+++ b/app/server/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 dev = [
     "pytest==8.4.1",
     "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
 ]
 
 [tool.pytest.ini_options]
@@ -27,8 +28,12 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [dependency-groups]
 dev = [
+    "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "ruff>=0.12.3",
 ]
