--- a/projects/tac-webbuilder/playwright-mcp-config.json
+++ b/projects/tac-webbuilder/playwright-mcp-config.json
@@ -6,7 +6,7 @@
     },
     "contextOptions": {
       "recordVideo": {
-        "dir": "/Users/Warmonger0/tac/tac-7/trees/5e6a13af/videos",
+        "dir": "./videos",
         "size": {
           "width": 1920,
           "height": 1080
