sdlc_implementor: feature: add extraction and validation scripts

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,17 @@
 # =============================================================================
 
 # -----------------------------------------------------------------------------
+# PROJECT CONFIGURATION
+# -----------------------------------------------------------------------------
+# (Required for standalone projects) Project root directory
+# Use relative path for standalone projects
+PROJECT_ROOT=.
+
+# (Required for standalone projects) Path to configuration file
+# Use relative path for standalone projects
+CONFIG_FILE=./config.yaml
+
+# -----------------------------------------------------------------------------
 # ANTHROPIC CONFIGURATION
 # -----------------------------------------------------------------------------
 # (REQUIRED) Your Anthropic API key for Claude Code programmatic mode
